# meeting/meeting-scheduler-service/internal/domain/dto/meeting_dto.go
@@ -1,24 +1,33 @@
 package dto
 
+import "time"
+
 // MeetingDTO represents meeting details returned in responses.
 // swagger:model MeetingDTO
 type MeetingDTO struct {
 	// Meeting unique identifier
 	MeetingID string `json:"meetingId"`
+
 	// Members who participated in the meeting
 	Members []UserDTO `json:"members,omitempty"`
-	// Timestamp of started meeting
-	Timestamp *int64 `json:"timestamp,omitempty"`
+
+	// Meeting's started time
+	StartedDate *time.Time `json:"startedTime,omitempty"`
+
+	// Meeting's finish time
+	FinishDate time.Time `json:"finishDate" validate:"required" example:"2025-10-10T12:50:05+02:00"`
+
 	// Meetings title
 	Title string `json:"title"`
 }
 
-func NewMeetingDTO(meetingID string, members []UserDTO, timestamp *int64, title string) *MeetingDTO {
+func NewMeetingDTO(meetingID string, members []UserDTO, startedDate, finishDate time.Time, title string) *MeetingDTO {
 	return &MeetingDTO{
-		MeetingID: meetingID,
-		Members:   members,
-		Timestamp: timestamp,
-		Title:     title,
+		MeetingID:   meetingID,
+		Members:     members,
+		StartedDate: &startedDate,
+		Title:       title,
+		FinishDate:  finishDate,
 	}
 }
 
