# meeting/meeting-scheduler-service/internal/infrastructure/rest/v1/handlers/manage_meeting_handler.go
@@ -1,15 +1,18 @@
 package handlers
 
 import (
+	"log"
 	"meeting-scheduler-service/internal/app/interfaces"
 	"meeting-scheduler-service/internal/domain/dto"
 	"meeting-scheduler-service/internal/infrastructure/middleware"
 	"meeting-scheduler-service/internal/infrastructure/server"
+	"meeting-scheduler-service/pkg"
 	"net/http"
+	"strconv"
 
 	"github.com/gorilla/mux"
 	// @title Meeting Scheduler API
-	// @version 1.0
+	// @version 1.1
 	// @description Serivce to requesting meetings in .tutora
 	// @host localhost:8003
 )
@@ -27,44 +30,39 @@ func NewManageMeetingHandler(m interfaces.ManageMeeting) ManageMeetingHandler {
 // StartMeeting godoc
 // @Summary Start a meeting
 // @Description Starts a meeting based on the provided DTO
-// @Tags start meetings
 // @Accept json
 // @Produce json
 // @Param meeting body dto.StartMeetingDTO true "Start Meeting DTO"
 // @Success 200 {object} server.Response{data=dto.MeetingDTO} "Meeting details after operation"
 // @Failure 400 {object} server.Response "Bad request due to invalid data or DTO type"
-// @Failure 405 {object} server.Response "Method not allowed (only POST supported)"
 // @Router /api/v1/meeting/start [post]
-// @Router /api/v1/meeting/start [put]
 func (m *ManageMeetingHandler) StartMeeting(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
 	body := middleware.GetDTO(r)
 	startDTO, ok := body.(*dto.StartMeetingDTO)
 	if !ok {
-		server.NewResponse(w, "Invalid DTO type", http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr("Invalid DTO type"), http.StatusBadRequest, nil)
 		return
 	}
 
 	meeting, err := m.manager.Start(ctx, *startDTO)
 	if err != nil {
-		server.NewResponse(w, err.Error(), http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
 		return
 	}
 
-	server.NewResponse(w, "Meeting started successfully!", http.StatusOK, meeting)
+	server.NewResponse(w, nil, http.StatusOK, meeting)
 }
 
 // EndMeeting godoc
 // @Summary End a meeting
 // @Description Ends a meeting based on the provided DTO
-// @Tags ending meetings
 // @Accept json
 // @Produce json
 // @Param meeting body dto.EndMeetingDTO true "End Meeting DTO"
-// @Success 200 {object} server.Response{data=dto.MeetingDTO}
+// @Success 204 {object} server.Response
 // @Failure 400 {object} server.Response
-// @Router /api/v1/meeting/end [post]
 // @Router /api/v1/meeting/end [delete]
 func (m *ManageMeetingHandler) EndMeeting(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -72,23 +70,22 @@ func (m *ManageMeetingHandler) EndMeeting(w http.ResponseWriter, r *http.Request
 	body := middleware.GetDTO(r)
 	endDTO, ok := body.(*dto.EndMeetingDTO)
 	if !ok {
-		server.NewResponse(w, "Invalid body", http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr("Invalid body"), http.StatusBadRequest, nil)
 		return
 	}
 
 	err := m.manager.Stop(ctx, *endDTO)
 	if err != nil {
-		server.NewResponse(w, err.Error(), http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
 		return
 	}
 
-	server.NewResponse(w, "Meeting ended successfully!", http.StatusOK, nil)
+	server.NewResponse(w, nil, http.StatusNoContent, nil)
 }
 
 // GetActiveMeeting godoc
 // @Summary Gets active meeting
 // @Description Fetches information about active meeting for given class. "members" will be empty.
-// @Tags meetings class
 // @Produce json
 // @Param class_id path string true "Class ID"
 // @Success 200 {object} server.Response{data=dto.MeetingDTO} "Found active meeting"
@@ -101,26 +98,25 @@ func (m *ManageMeetingHandler) GetActiveMeeting(w http.ResponseWriter, r *http.R
 	vars := mux.Vars(r)
 	classID := vars["class_id"]
 	if classID == "" {
-		server.NewResponse(w, "Empty class id", http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr("Empty class id"), http.StatusBadRequest, nil)
 		return
 	}
 
 	dto, err := m.manager.ActiveMeeting(ctx, classID)
 	if err != nil {
-		server.NewResponse(w, "Not found or not started yet", http.StatusNotFound, nil)
+		server.NewResponse(w, pkg.Ptr("Not found or not started yet"), http.StatusNotFound, nil)
 		return
 	}
 
-	server.NewResponse(w, "Found active meeting", http.StatusOK, *dto)
+	server.NewResponse(w, nil, http.StatusOK, *dto)
 }
 
 // PlanMeeting godoc
 // @Summary Plan meeting for the future
 // @Description Used to plan meetings and starts meeting automatically at start date
-// @Tags meetings class plan
 // @Accept json
 // @Produce json
-// @Success 201 {object} server.Response{data=dto.PlanMeetingDTO} "Meeting planned successfully!"
+// @Success 201 {object} server.Response{data=dto.PlannedMeetingDTO} "Meeting planned successfully!"
 // @Failure 400 {object} server.Response "Invalid body | meeting already started | meeting already planned"
 // @Router /api/v1/meeting/plan [post]
 func (m *ManageMeetingHandler) PlanMeeting(w http.ResponseWriter, r *http.Request) {
@@ -129,29 +125,81 @@ func (m *ManageMeetingHandler) PlanMeeting(w http.ResponseWriter, r *http.Reques
 	body := middleware.GetDTO(r)
 	planDTO, ok := body.(*dto.PlanMeetingDTO)
 	if !ok {
-		server.NewResponse(w, "Invalid body", http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr("Invalid body"), http.StatusBadRequest, nil)
 		return
 	}
 
 	meetingDTO, err := m.manager.Plan(ctx, *planDTO)
 	if err != nil {
-		server.NewResponse(w, err.Error(), http.StatusBadRequest, nil)
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
 		return
 	}
 
-	server.NewResponse(w, "Meeting planned successfully!", http.StatusCreated, *meetingDTO)
+	server.NewResponse(w, nil, http.StatusCreated, *meetingDTO)
 }
 
+// CancelPlannedMeeting godoc
+// @Summary Cancel not started meeting
+// @Description Delete from planned meetings, one with provided id
+// @Param id path int true "Identifier of planned meeting"
+// @Produce json
+// @Success 204 {object} server.Response
+// @Failure 400 {object} server.Response "Invalid id provided"
+// @Router /api/v1/meeting/plan/{id} [delete]
 func (m *ManageMeetingHandler) CancelPlannedMeeting(w http.ResponseWriter, r *http.Request) {
-	// ctx := r.Context()
+	ctx := r.Context()
 
-	// logic
-	server.NewResponse(w, "Not impl", http.StatusNotFound, nil)
+	strID, ok := mux.Vars(r)["id"]
+	id, err := strconv.Atoi(strID)
+	if !ok || err != nil {
+		server.NewResponse(w, pkg.Ptr("Invalid id provided"), http.StatusBadRequest, nil)
+		return
+	}
+
+	if err := m.manager.CancelPlannedMeeting(ctx, id); err != nil {
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
+		return
+	}
+
+	server.NewResponse(w, nil, http.StatusNoContent, nil)
 }
 
+// GetPlannedMeetings godoc
+// @Summary Fetch planned meetings
+// @Description Paginated fetch of planned meetings supporting infinite scroll
+// @Param class_id path string true "Class ID"
+// @Param last_start_timestamp query string false "Last start date timestamp (unix utc format eg. 1760121360)"
+// @Param limit query int false "Max number per page, default is 10"
+// @Produce json
+// @Success 200 {object} server.Response{data=[]dto.PlannedMeetingDTO} "List of planned meetings"
+// @Failure 400 {object} server.Response "Invalid parameters"
+// @Failure 404 {object} server.Response "No planned meetings found"
+// @Router /api/v1/meeting/plan/{class_id} [get]
 func (m *ManageMeetingHandler) GetPlannedMeetings(w http.ResponseWriter, r *http.Request) {
-	// ctx := r.Context()
+	ctx := r.Context()
 
-	// logic
-	server.NewResponse(w, "Not impl", http.StatusNotFound, nil)
+	classID := mux.Vars(r)["class_id"]
+	lastStartTimestamp := r.URL.Query().Get("last_start_timestamp")
+	limit := r.URL.Query().Get("limit")
+
+	dto, err := dto.NewFetchPlannedMeetingsDTO(classID, limit, lastStartTimestamp)
+	log.Print(*dto)
+	if err != nil {
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
+		return
+	}
+
+	plannedMeetings, err := m.manager.GetPlannedMeetings(ctx, *dto)
+
+	if err != nil {
+		server.NewResponse(w, pkg.Ptr(err.Error()), http.StatusBadRequest, nil)
+		return
+	}
+
+	if len(plannedMeetings) < 1 {
+		server.NewResponse(w, pkg.Ptr("Not found matched planned meetings"), http.StatusNotFound, nil)
+		return
+	}
+
+	server.NewResponse(w, nil, http.StatusOK, plannedMeetings)
 }
